# Comp362

./: README.md
lab10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  notes.md
lab11/: notes.md
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  out.txt  sub  test.txt  typescript
lab4/: todo.md
lab4/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
lab4/task1/.cache/clangd/index/: ipc_POSIX_messg.h.F251FBB4D1DFFE7E.idx  ipc_POSIX_receive.c.007F19307F0C995C.idx  ipc_POSIX_send.c.130047E303989EBD.idx  npipe.h.7EAA3CDDE30D355E.idx  npipe_receive.c.620313D36A83F43D.idx  npipe_send.c.ABD52EA9CDCB9121.idx  pipe.c.5A6169D5D2DEA72F.idx  pipe_1.c.67988AAF055164C8.idx  pipe_2.c.1C36D99E48C84F64.idx  shm_POSIX.h.E184FD0F5EDA96A8.idx  shm_POSIX_time_client.c.9A02C985468618D0.idx  shm_POSIX_time_server.c.DEB7AF004F8D109F.idx
lab4/task1/ipc_POSIX/: ipc_POSIX_messg.h  ipc_POSIX_receive.c  ipc_POSIX_send.c
lab4/task1/npipe/: npipe.h  npipe_receive.c  npipe_send.c
lab4/task1/pipes/: pipe.c  pipe_1.c  pipe_2.c
lab4/task1/shm_POSIX/: shm_POSIX.h  shm_POSIX_time_client.c  shm_POSIX_time_server.c
lab4/task1/typescripts/: pipe_1
lab5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  in1.txt  matrixMult.c
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
lab8/: a.out  test.c
lab9/: steps
lecture/: a.out  dir.c  test.c
project2/: CMakeCache.txt  CMakeLists.txt  Makefile  (+3 more)
(+236 files in other folders)
